tests/fail/elaboration/unification/mismatch/arrow-body-type.snap
stdout = ''
stderr = '''
error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/arrow-body-type.fathom:3:39
  │
3 │ fun (A : Type) -> fun (a : A) -> A -> a
  │                                       ^ type mismatch, expected `Type`, found `A`
  │
  = expected `Type`
       found `A`

'''
